--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,7 +43,7 @@ jobs:
         run: git reset --hard
 
       - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: SamKirkland/FTP-Deploy-Action@v4.0.0
         with:
           server: ${{ secrets.FTP_IP }}
           username: ${{ secrets.FTP_USERNAME }}
@@ -51,11 +51,11 @@ jobs:
           local-dir: docs/.vuepress/dist/ # 选择哪些文件要部署到服务器，这个选项在这里选了之后，要在.git-ftp-include中添加相应的路径
           server-dir: /
 
-          ftp-server: sftp://${{ secrets.FTP_IP }}/home/www/htdocs # 服务器地址和端口（可以填域名，不过我服务器做了全站加速会导向加速结点的IP，所以只能用服务器的IP）
-          ftp-username: ${{ secrets.FTP_USERNAME }} # FTP用户名
-          ftp-password: ${{ secrets.FTP_PASSWORD }} # FTP密码
-          git-ftp-args: --insecure # （如果是FTP连接的话--insecure不用加）
-          # local-dir: docs/.vuepress/dist/ # 选择哪些文件要部署到服务器，这个选项在这里选了之后，要在.git-ftp-include中添加相应的路径
+#           ftp-server: sftp://${{ secrets.FTP_IP }}/home/www/htdocs # 服务器地址和端口（可以填域名，不过我服务器做了全站加速会导向加速结点的IP，所以只能用服务器的IP）
+#           ftp-username: ${{ secrets.FTP_USERNAME }} # FTP用户名
+#           ftp-password: ${{ secrets.FTP_PASSWORD }} # FTP密码
+#           git-ftp-args: --insecure # （如果是FTP连接的话--insecure不用加）
+#           local-dir: docs/.vuepress/dist/ # 选择哪些文件要部署到服务器，这个选项在这里选了之后，要在.git-ftp-include中添加相应的路径
 
       - name: upload-artifact
         uses: actions/upload-artifact@v4 #共享或保存action过程中产生的文件
